--- a/tests/cs3-doublecost.in
+++ b/tests/cs3-doublecost.in
@@ -2,7 +2,7 @@ VERSION:2
 
 When one of your Monster would evolve into a level 5 green Monster card, by suspending this placing 1 card from under one of your Tamers as the bottom evolution card of that Monster, reduce the evolution cost by 1
 
-# [Your Turn] When one of your green Monster would be played, by placing 1 card from under one of your Tamers as the bottom digivolution card of that Monster, reduce the play cost by 1.
+# [Your Turn] When one of your green Monster would be played, by placing 1 card from under one of your Tamers as the bottom evolution card of that Monster, reduce the play cost by 1.
 
 FIELD1:FalseHit,CS3-Sorcery Tamer,CS3-Birdwatcher,CS3-02,CS3-03 Evo1,CS3-06 Evo2,CS3-06
 
