--- a/tests/cs-inthemain-breeding.in
+++ b/tests/cs-inthemain-breeding.in
@@ -8,7 +8,7 @@ HAND1:DW1-Van CS1-02
 DECK1:DW1-Van CS2-02 CS2-03
 GAME:P1 T3 MAIN 9
 DUMP:DECK,EGGZONE
-ECHO: -- if we haven't loaded up "Loading" then this test will fail. try cs-facedown
+ECHO: -- if we haven't loaded up "Loading" then this test will fail. try cs-place-facedown
 GET-X-PLAYS
 
 ECHO: -- use main effect
