--- a/tests/cs3-doublecost-fail2.in
+++ b/tests/cs3-doublecost-fail2.in
@@ -1,6 +1,6 @@
 VERSION:2
 
-When one of your Monster would evolve into a level 5 green Monster card, by suspending this placing 1 card from under one of your Tamers as the bottom evolution card of that Monster, reduce the evolution cost by 1
+# When one of your Monster would evolve into a level 5 green Monster card, by suspending this placing 1 card from under one of your Tamers as the bottom evolution card of that Monster, reduce the evolution cost by 1
 
 # [Your Turn] When one of your green Monster would be played, by placing 1 card from under one of your Tamers as the bottom evolution card of that Monster, reduce the play cost by 1.
 
